Versao 1.1: bug scrollbar fix

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ main{
     margin: auto;
     background-color: white;
     max-width: 800px;
-    min-width: 450px;
+    min-width: 350px;
     box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.235);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -176,7 +176,6 @@ section#extra > p{
 }
 
 section#extra > ul{
-    list-style-position: inside;
     columns: 2;
     list-style-type: "✓ ";
 }
